--- a/config_server.json
+++ b/config_server.json
@@ -1,6 +1,6 @@
 {
     "port": 16385,
-    "token": ["chika"],
+    "token": ["gmznb"],
     "certificate": "/root/fullchain.cer",
     "private_key": "/root/private.key",
     "ip": "::",
