--- a/config_client.json
+++ b/config_client.json
@@ -2,7 +2,7 @@
     "relay": {
         "server": "chika.example.com",
         "port": 16385,
-        "token": "chika",
+        "token": "gmznb",
         "ip": "10.0.0.1",
         "congestion_controller": "bbr",
         "alpn": ["h3"],
